Fix Score view layout problem

--- a/src/UI/ViewScore.css
+++ b/src/UI/ViewScore.css
@@ -15,8 +15,6 @@
 }
 
 #ViewScore main {
-	height: 0%;
-
 	margin-bottom: 1rem;
 	border-bottom: 1px dashed var(--ColorRule);
 	padding-bottom: 1.25rem;
